# sig-agg

./: AGENTS.md  CLAUDE.md  Cargo.toml  LIMITATIONS.md  README.md  dory_urs_24_variables.urs  dory_urs_28_variables.backup
.kiro/specs/jolt-provable-aggregation/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
benches/: aggregation_benchmarks.rs
examples/: error_handling.rs  key_aggregation.rs  multi_key_aggregation.rs  single_key_aggregation.rs
openspec/changes/archive/2025-11-15-introduce-phony-xmss-benchmark/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-15-introduce-phony-xmss-benchmark/specs/benchmark-data-generation/: spec.md
openspec/specs/benchmark-data-generation/: spec.md
src/: aggregator.rs  error.rs  lib.rs  types.rs
src/jolt/: Cargo.toml  dory_srs_24_variables.srs  dory_urs_24_variables.urs
src/jolt/guest/: Cargo.toml
src/jolt/guest/src/: lib.rs
src/jolt/src/: main.rs  phony_xmss.rs
src/jolt/tests/: zkvm_integration.rs
tests/: hashsig_compatibility_test.rs  integration_test.rs
