[package]
name = "jolt"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { git = "https://github.com/a16z/jolt", features = ["host"] }
guest = { path = "./guest" }
hashsig = { git = "https://github.com/b-wagn/hash-sig" }
rayon = "1.8"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
