[package]
name = "jolt"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { git = "https://github.com/a16z/jolt", features = ["host"] }
guest = { path = "./guest" }
hashsig = { git = "https://github.com/b-wagn/hash-sig" }
rayon = "1.8"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "2117e4b" }
num-bigint = "0.4"
num-traits = "0.2"
