[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["guest-std"] }
hashsig = { git = "https://github.com/b-wagn/hash-sig" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
